--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Remonty 48-72h</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="scroll-smooth font-lato">
     <nav class="w-full sticky top-0 bg-brown m-0 p-2 z-10">
