--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" sizes="72x72" href="img/logo_remonty.webp">
     <link rel="apple-touch-icon" sizes="57x57" href="img/logo_remonty.webp">
     <link rel="shortcut icon" href="/img/logo_remonty.jpg">
-    <link href="/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
